# dag_scheduler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.en.md  README.md  README.zh.md  deep-research-report.md
.github/workflows/: ci.yml
docs/: BUILD_ISSUES_2026-04-21_22.md  DEPLOYMENT.md  EXECUTION_PLAN.md  RELEASE_CHECKLIST.md  ROADMAP.md  ROLLBACK.md
examples/: failure.workflow  sample.workflow
include/dag/: dag_builder.hpp  executor.hpp  observer.hpp  replay.hpp  scheduler.hpp  state_store.hpp  types.hpp  workflow.hpp
packaging/: dag-scheduler.service
src/: dag_builder.cpp  executor.cpp  main.cpp  observer.cpp  replay.cpp  scheduler.cpp  state_store.cpp  types.cpp  workflow.cpp
tests/: test_main.cpp
